Add New Item function finished

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -31,7 +31,14 @@
                             <outlet property="delegate" destination="9LL-QS-WjE" id="oTk-8T-Sfb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="gOW-VM-SV2"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="gOW-VM-SV2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Iub-Hb-Ypo">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="9LL-QS-WjE" id="EB5-j5-ceR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gSA-br-ncU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
